--- a/site/data.html
+++ b/site/data.html
@@ -15,17 +15,17 @@
 
 <body>
     <div id="container_data">
+        <div id="profile">
+            <div id="profilepic"></div>
+            <div id="profilename"><h1></h1></div>
+        </div>
         <div id="killdeathratio">
             <h2>K/D RATIO</h2>
             <div id="killdeathratio_outer"></div>
             <div id="killdeathratio_inner"></div>
         </div>
         <div id="mainstats">
-            <div id="accuracy" class="mainstat"></div>
-            <div id="totalkills" class="mainstat"></div>
-            <div id="headshot" class="mainstat"></div>
-            <div id="timeplayed" class="mainstat"></div>
-            <div id="winrate" class="mainstat"></div>
+            <div id="accuracy" class="mainstat"></div><div id="totalkills" class="mainstat"></div><div id="headshot" class="mainstat"></div><div id="timeplayed" class="mainstat"></div><div id="winrate" class="mainstat"></div>
         </div>
     </div>
     
