Responsivnost, az na drobne chyby, done, last match done, other stats done

--- a/site/index.html
+++ b/site/index.html
@@ -16,10 +16,10 @@
     <div class="container">
         <div id="center">
             <div id="search">
-                <h1>Sem zadejte odkaz na svůj Steam profil.</h1>
-                <form class="form" action="data.html" method="GET">
-                <input type="text" name="SteamID" placeholder="76561198101455802" id="steamIDvalue" required>
-                <a href="data.html"><input type="submit" name="submit" value="&#10140" id="rekt"></a>
+                <h1>View your CS:GO stats</h1>
+                <form class="form" action="data.html" >
+                <input type="text" name="SteamID" placeholder="Enter SteamID64 or a link to Steam Profile" id="steamIDvalue" required>
+                <a href="data.html"><input onclick="submit();" type="submit" name="submit" value="&#10140" id="rekt"></a>
                 </form>
             </div>
         </div>
