--- a/site/index.html
+++ b/site/index.html
@@ -13,18 +13,14 @@
 </head>
 
 <body>
-    <div class="container">
-        <div id="center">
-            <div id="search">
-                <h1>View your CS:GO stats</h1>
+    <div class="center">
+        <div id="search">
+            <h1>View your CS:GO stats</h1>
                 <form class="form" action="data.html" >
-                <input type="text" name="SteamID" placeholder="Enter SteamID64 or a link to Steam Profile" id="steamIDvalue" required>
-                <a href="data.html"><input onclick="submit();" type="submit" name="submit" value="&#10140" id="rekt"></a>
+                    <input type="text" name="SteamID" placeholder="Enter SteamID64 or a link to Steam Profile" id="steamIDvalue" required>
+                    <a href="data.html"><input onclick="submit();" type="submit" name="submit" value="&#10140" id="rekt"></a>
                 </form>
-            </div>
         </div>
-    </div>    
-    <div class="container">  
     </div>
 </body>
 </html>
