--- a/site/data.html
+++ b/site/data.html
@@ -10,36 +10,34 @@
     <link rel="stylesheet" href="styles/style.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="scripts/datascript.js"></script>
-    
 </head>
-
-<body>
 <body>
     <div id="container_data">
-        <div id="profile">
-            
-        </div>
+        <div id="profile"></div>
         <div id="killdeathratio">
             <h2 class="headline">K/D RATIO</h2>
-            <div id="killdeathratio_container"><div id="killdeathratio_outer"></div>
-            <div id="killdeathratio_inner"></div></div>
+            <div id="killdeathratio_container">
+                <div id="killdeathratio_outer"></div>
+                <div id="killdeathratio_inner"></div>
+            </div>
         </div>
         <div id="mainstats">
             <div id="accuracy" class="mainstat"></div>
             <div id="totalkills" class="mainstat"></div>
             <div id="headshot" class="mainstat"></div>
-            <div id="timeplayed" class="mainstat"></div><div id="winrate" class="mainstat"></div>
+            <div id="timeplayed" class="mainstat"></div>
+            <div id="winrate" class="mainstat"></div>
         </div>
         <h2 class="headline">Favourite Weapons</h2>
-        <div id="fav_weapons">
-        </div>
+        <div id="fav_weapons"></div>
             <div class="show_more" id="show_more_weapons">show more</div>
-            <h2 class="headline">Favourite Maps</h2>
-            <div id="fav_maps"></div>
+        <h2 class="headline">Favourite Maps</h2>
+        <div id="fav_maps"></div>
             <div class="show_more" id="show_more_maps">show more</div>
-            <div id="last_match"></div>
-            <h2 id="other_stats_headline" class="headline">Other Stats</h2>
-            <div id="other_stats"></div>
-    </div>    
+        <div id="last_match"></div>
+        <h2 id="other_stats_headline" class="headline">Other Stats</h2>
+        <div id="other_stats"></div>
+        <div id="credits">Štěpán Paulík    &copy; 2016</div>
+    </div>
 </body>    
 </html>
